# mg-rs

./: .gitignore  Cargo.toml  README.md
assets/: cube_120.glslf  cube_150.glslv  cube_150_frag.glsl  cube_150_vert.glsl  default.mtl  pbr_150_frag.glsl  pbr_150_vert.glsl  pbr_tex_150_frag.glsl  pbr_tex_150_vert.glsl
assets/models/Eames_Chair_DSW/: Eames_Chair_DSW.mtl
src/: main.rs  material.rs  mesh.rs  render.rs  ui_handler.rs  world.rs
src/entity/: entity_fluid.rs  entity_obj.rs  mod.rs
